--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ env:
     - DB=mysql db_dsn='mysql://root@127.0.0.1/cakephp_test'
 #    - DB=pgsql db_dsn='postgres://postgres@127.0.0.1/cakephp_test'
     - DB=sqlite db_dsn='sqlite:///:memory:'
-
   global:
     - DEFAULT=1
 
@@ -20,25 +19,26 @@ matrix:
   fast_finish: true
 
   include:
-    - php: 5.6
+    - php: 7.0
       env: PHPCS=1 DEFAULT=0
 
+    - php: 7.0
+      env: COVERALLS=1 DEFAULT=0
+
 before_script:
-  - if [[ $TRAVIS_PHP_VERSION != 7.0 ]]; then phpenv config-rm xdebug.ini; fi
-
-  - composer install --prefer-dist --no-interaction
-
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
   - if [ $DB = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test;'; fi
 #  - if [ $DB = 'pgsql' ]; then psql -c 'CREATE DATABASE cakephp_test;' -U postgres; fi
+  - if [ '$COVERALLS' = '1' ]; then mkdir -p build/logs; fi
+  - command -v phpenv > /dev/null && phpenv rehash || true
 
 script:
-  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION != 7.0 ]]; then vendor/bin/phpunit; fi
-  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then vendor/bin/phpunit --coverage-clover=clover.xml; fi
-
-  - if [ '$PHPCS' = '1' ]; then ./vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests; fi
-
-after_success:
-  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then bash <(curl -s https://codecov.io/bash); fi
+  - if [ '$COVERALLS' = '1' ]; then vendor/bin/phpunit --stderr --coverage-clover build/logs/clover.xml; fi
+  - if [ '$COVERALLS' = '1' ]; then ls -la build/logs; fi
+  - if [ '$COVERALLS' = '1' ]; then vendor/bin/coveralls -v; fi
+  - if [ '$DEFAULT' = '1' ]; then vendor/bin/phpunit --stderr; fi
+  - if [ '$PHPCS' = '1' ]; then vendor/bin/phpcs -n -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP --ignore=vendor --ignore=docs --ignore=tests/bootstrap.php . ; fi
 
 notifications:
   email: false
