--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "muffin/orderly": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0"
+        "phpunit/phpunit": "^5.7|^6.0",
+        "satooshi/php-coveralls": "^1.0",
+        "cakephp/cakephp-codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": {
