--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "cakephp/cakephp": "^3.4",
         "muffin/slug": "^1.1",
-        "muffin/orderly": "^1.0"
+        "muffin/orderly": "^1.0",
+        "cakephp/migrations": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7|^6.0"
