--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         "source": "https://github.com/CakeDC/cakephp-forum"
     },
     "require": {
-        "cakephp/cakephp": "^3.4",
-        "muffin/slug": "^1.1",
-        "muffin/orderly": "^1.0",
-        "cakephp/migrations": "^1.7"
+        "cakephp/cakephp": "4.x-dev as 4.0.0",
+        "muffin/slug": "dev-cake-4.x",
+        "muffin/orderly": "dev-cake-4.x",
+        "cakephp/migrations": "4.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^6.0"
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,8 +36,9 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "CakeDC\\Forum\\Test\\": "tests",
-            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
+            "CakeDC\\Forum\\Test\\": "tests/",
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
