--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,15 @@
         "source": "https://github.com/CakeDC/cakephp-forum"
     },
     "require": {
-        "cakephp/cakephp": "4.x-dev as 4.0.0",
+        "cakephp/cakephp": "^4.0.0",
         "muffin/slug": "dev-cake-4.x",
         "muffin/orderly": "dev-cake-4.x",
-        "cakephp/migrations": "4.x-dev"
+        "cakephp/migrations": "^4.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "php-coveralls/php-coveralls": "^2.1",
-        "cakephp/cakephp-codesniffer": "dev-next"
+        "cakephp/cakephp-codesniffer": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -58,7 +58,7 @@
         "test": "phpunit --stderr",
         "stan": "phpstan analyse src/",
         "psalm": "php vendor/psalm/phar/psalm.phar --show-info=false src/ ",
-        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan-shim:^0.11.18 psalm/phar:^3.5  && mv composer.backup composer.json",
+        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12.7 psalm/phar:~3.8.0 && mv composer.backup composer.json", 
         "stan-rebuild-baseline": "phpstan analyse --configuration phpstan.neon --error-format baselineNeon src/ > phpstan-baseline.neon",
         "psalm-rebuild-baseline": "php vendor/psalm/phar/psalm.phar --show-info=false  --set-baseline=psalm-baseline.xml  src/",
         "rector": "rector process src/",
