--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "source": "https://github.com/CakeDC/cakephp-forum"
     },
     "require": {
-        "cakephp/cakephp": "^4.0",
+        "cakephp/cakephp": "^4.4",
         "muffin/slug": "^2.0.0",
         "muffin/orderly": "^2.0.0",
         "cakephp/migrations": "^3.0.0"
@@ -65,5 +65,10 @@
         "rector-setup": "cp composer.json composer.backup && composer require --dev rector/rector:^0.11.2 && mv composer.backup composer.json",
         "coverage-test": "phpunit --stderr --coverage-clover=clover.xml"
     },
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    }
 }
