--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "autoload-dev": {
         "psr-4": {
             "CakeDC\\Forum\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/",
+            "TestApp\\": "tests/test_app/TestApp/"
         }
     },
     "minimum-stability": "dev",
