updated composer.json, code cleanup

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,11 +2,10 @@ includes:
     - phpstan-baseline.neon
 
 parameters:
-    level: 6
-    checkMissingIterableValueType: false
-    checkGenericClassInNonGenericObjectType: false
-    bootstrapFiles:
-        - tests/bootstrap.php
-    ignoreErrors:
-
-services:
+	level: 8
+	treatPhpDocTypesAsCertain: false
+	checkGenericClassInNonGenericObjectType: false
+	bootstrapFiles:
+		- tests/bootstrap.php
+	paths:
+		- src/
