--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,26 @@
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
+; This file is for unifying the coding style for different editors and IDEs.
+; More information at http://editorconfig.org
 
 root = true
 
 [*]
-end_of_line = lf
-charset = utf-8
 indent_style = space
 indent_size = 4
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.neon]
+[*.bat]
+end_of_line = crlf
+
+[*.yml]
+indent_size = 2
+
+[*.xml]
+indent_size = 2
+
+[Makefile]
 indent_style = tab
 
-[phars.xml]
-indent_size = 2
-
-[*.js]
-indent_size = 2
+[*.neon]
+indent_style = tab
