--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/cakephp": "5.x-dev",
-        "muffin/slug": "dev-cake-5",
-        "muffin/orderly": "dev-cake-5",
-        "cakephp/migrations": "4.x-dev"
+        "cakephp/cakephp": "^5.0",
+        "muffin/slug": "^3.0",
+        "muffin/orderly": "^3.0",
+        "cakephp/migrations": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1.0",
@@ -43,30 +43,25 @@
             "TestApp\\": "tests/test_app/TestApp/"
         }
     },
-    "minimum-stability": "dev",
     "scripts": {
-        "analyse": [
-            "@stan",
-            "@psalm"
-         ],
         "check": [
             "@cs-check",
-            "@test",
-            "@analyse"
+            "@test"
         ],
-        "cs-check": "phpcs -n -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
-        "cs-fix": "phpcbf --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
-        "test": "phpunit --stderr",
-        "stan": "phpstan analyse src/",
-        "psalm": "php vendor/psalm/phar/psalm.phar --show-info=false src/ ",
-        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:0.12.94 psalm/phar:~4.9.2 && mv composer.backup composer.json",
-        "stan-rebuild-baseline": "phpstan analyse --configuration phpstan.neon --error-format baselineNeon src/ > phpstan-baseline.neon",
-        "psalm-rebuild-baseline": "php vendor/psalm/phar/psalm.phar --show-info=false  --set-baseline=psalm-baseline.xml  src/",
-        "rector": "rector process",
-        "rector-setup": "cp composer.json composer.backup && composer require --dev rector/rector:^0.11.2 && mv composer.backup composer.json",
-        "coverage-test": "phpunit --stderr --coverage-clover=clover.xml"
+        "cs-check": "phpcs --colors --parallel=16 -p src/ tests/",
+        "cs-fix": "phpcbf --colors --parallel=16 -p src/ tests/",
+        "phpstan": "tools/phpstan analyse",
+        "psalm": "tools/psalm --show-info=false",
+        "stan": [
+            "@phpstan",
+            "@psalm"
+        ],
+        "phpstan-tests": "tools/phpstan analyze -c tests/phpstan.neon",
+        "phpstan-baseline": "tools/phpstan --generate-baseline",
+        "psalm-baseline": "tools/psalm  --set-baseline=psalm-baseline.xml",
+        "stan-setup": "phive install",
+        "test": "phpunit"
     },
-    "prefer-stable": true,
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
